[workspace]
resolver = "2"
members = [
  "contracts/entry-point",
  "contracts/adapters/ibc/*",
  "contracts/adapters/swap/*",
  "contracts/placeholder",
  "packages/*",
]

[workspace.package]
version = "0.3.0"
authors = ["Skip"]
edition = "2021"
rust-version = "1.71.0"
license = "TBD"
homepage = "https://skip.money/"
repository = "https://github.com/skip-mev/skip-api-contracts"
documentation = "https://github.com/skip-mev/skip-api-contracts#readme"
keywords = ["cosmwasm"]

[workspace.dependencies]
astroport = "2.9"
dexter = "1.4.0"
dexter-vault = "1.1.0"
dexter-stable-pool = "1.1.1"
dexter-weighted-pool = "1.1.1"
dexter-lp-token = "1.0.0"
dexter-router = "1.1.0"
cosmwasm-schema = "1.5.0"
cosmwasm-std = { version = "1.5", features = ["stargate"] }
cosmos-sdk-proto = { version = "0.19", default-features = false }
cw2 = "1.1"
cw20 = "1.1"
cw-storage-plus = "1"
cw-utils = "1.0.3"
cw-multi-test = "1.2.0"
ibc-proto = { version = "0.32.1", default-features = false }
lido-satellite = { git = "https://github.com/hadronlabs-org/lido-satellite", branch = "main", features = [
  "library",
] }
neutron-proto = { version = "0.1.1", default-features = false, features = [
  "cosmwasm",
] }
neutron-sdk = "0.8"
osmosis-std = "0.15.3"
prost = "0.11"
serde-cw-value = "0.7.0"
serde-json-wasm = "0.5.1"
skip = { path = "./packages/skip" }
test-case = "3.3.1"
thiserror = "1"
white-whale-std = "1.1.1"
cw-controllers = "1.1"
oraiswap = { git = "https://github.com/oraichain/oraiswap.git", rev = "843b39ca6c02ae8f2de628f4ddd444173d4de3ba" }
oraiswap-v3 = { git = "https://github.com/oraichain/oraiswap-v3.git", rev = "7f2b8ac6a239790006d7a662e6f56c175e189be0", features = [
  "library",
] }
cw20-ics20-msg = { git = "https://github.com/oraichain/ibc-bridge-wasm.git", rev = "2aeedc7f4f21823db6872aed8ca97f4376e597f8" }

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = true
opt-level = 3
overflow-checks = true
rpath = false
