[workspace]
resolver = "2"
members  = [
  "contracts/entry-point",
  "contracts/secret-entry-point",
  "contracts/adapters/hyperlane",
  "contracts/adapters/ibc/*",
  "contracts/adapters/swap/*",
  "contracts/placeholder",
  "packages/*",
]

[workspace.package]
version       = "0.3.0"
authors       = ["Skip"]
edition       = "2021"
rust-version  = "1.71.0"
license       = "TBD"
homepage      = "https://skip.money/"
repository    = "https://github.com/skip-mev/skip-go-cosmwasm-contracts"
documentation = "https://github.com/skip-mev/skip-go-cosmwasm-contracts#readme"
keywords      = ["cosmwasm"]

[workspace.dependencies]
astroport            = "2.9"
astrovault           = "0.1.8"
dexter               = "1.4.0"
dexter-vault         = "1.1.0"
dexter-stable-pool   = "1.1.1"
dexter-weighted-pool = "1.1.1"
dexter-lp-token      = "1.0.0"
dexter-router        = "1.1.0"
cosmwasm-schema      = "1.5.4"
cosmwasm-std         = { version = "1.5.4", features = ["stargate"] }
cosmos-sdk-proto     = { version = "0.19", default-features = false }
cw2                  = "1.1"
cw20                 = "1.1"
cw-storage-plus      = "1"
cw-utils             = "1.0.3"
cw-multi-test        = "0.20.0"
hpl-interface        = { git = "https://github.com/many-things/cw-hyperlane.git", branch = "main", features = ["library"] }
ibc-proto            = { version = "0.32.1", default-features = false }
lido-satellite       = { git = "https://github.com/hadronlabs-org/lido-satellite", branch = "main", features = ["library"] }
drop-factory         = { git = "https://github.com/hadronlabs-org/drop-contracts.git", branch = "feat/audit-fixes", features = ["library"] }
drop-staking-base    = { git = "https://github.com/hadronlabs-org/drop-contracts.git", branch = "feat/audit-fixes", features = ["library"] }
mockall              = "0.12.1"
neutron-proto        = { version = "0.1.1", default-features = false, features = ["cosmwasm"] }
neutron-sdk          = "0.10.0"
osmosis-std          = "0.15.3"
prost                = "0.11"
pryzm-std            = "0.1.7"
serde                = { version = "1.0.194", default-features = false, features = ["derive"] }
serde-cw-value       = "0.7.0"
serde-json-wasm      = "1.0.1"
skip                 = { version = "0.3.0", path = "./packages/skip" }
secret-skip          = { version = "0.3.0", path = "./packages/secret-skip" }
test-case            = "3.3.1"
thiserror            = "1"
white-whale-std      = "1.1.1"

[profile.release]
codegen-units    = 1
debug            = false
debug-assertions = false
incremental      = false
lto              = true
opt-level        = 3
overflow-checks  = true
rpath            = false
