[package]
name          = "skip-go-secret-entry-point"
version       = { workspace = true }
rust-version  = { workspace = true }
authors       = { workspace = true }
edition       = { workspace = true }
license       = { workspace = true }
homepage      = { workspace = true }
repository    = { workspace = true }
documentation = { workspace = true }
keywords      = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-schema   = { workspace = true }
skip-go-swap-adapter-shade-protocol = { path = "../adapters/swap/shade-protocol" }
secret-skip = { workspace = true }
#cosmwasm-std      = { workspace = true }
#cw2               = { workspace = true }
cw20              = { workspace = true }
#cw-storage-plus   = { workspace = true }
cw-utils          = { workspace = true }
#skip              = { workspace = true }
thiserror         = { workspace = true }
serde = "1.0.114"
schemars = "0.8.1"
secret-toolkit = { git = "https://github.com/scrtlabs/secret-toolkit", tag = "v0.10.0" }
secret-storage-plus = { git = "https://github.com/securesecrets/secret-plus-utils", tag = "v0.1.1", features = [] }
cosmwasm-std = { package = "secret-cosmwasm-std", version = "1.1.11"}

[dev-dependencies]
test-case         = { workspace = true }
serde_json = "1.0.64"
