[package]
name          = "skip-go-ibc-adapter-ibc-hooks"
version       = { workspace = true }
rust-version  = { workspace = true }
authors       = { workspace = true }
edition       = { workspace = true }
license       = { workspace = true }
homepage      = { workspace = true }
repository    = { workspace = true }
documentation = { workspace = true }
keywords      = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-schema  = { workspace = true }
cosmwasm-std     = { workspace = true }
cw2              = { workspace = true }
cw-storage-plus  = { workspace = true }
ibc-proto        = { workspace = true }
prost            = { workspace = true }
serde-json-wasm  = { workspace = true }
serde-cw-value   = { workspace = true }
skip             = { workspace = true }
thiserror        = { workspace = true }

[dev-dependencies]
test-case        = { workspace = true }