[package]
name          = "skip-api-ibc-adapter-neutron-transfer"
version       = { workspace = true }
rust-version  = { workspace = true }
authors       = { workspace = true }
edition       = { workspace = true }
license       = { workspace = true }
homepage      = { workspace = true }
repository    = { workspace = true }
documentation = { workspace = true }
keywords      = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-schema  = { workspace = true }
cosmwasm-std     = { workspace = true }
cw-storage-plus  = { workspace = true }
neutron-proto    = { workspace = true }
neutron-sdk      = { workspace = true }
prost            = { workspace = true }
skip             = { workspace = true }
thiserror        = { workspace = true }

[dev-dependencies]
cosmos-sdk-proto = { workspace = true }
test-case        = { workspace = true }