[package]
name = "skip-api-swap-adapter-oraidex"
version = { workspace = true }
rust-version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
documentation = { workspace = true }
keywords = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-schema = { workspace = true }
cosmwasm-std = { workspace = true }
cw2 = { workspace = true }
cw20 = { workspace = true }
cw-storage-plus = { workspace = true }
cw-utils = { workspace = true }
skip = { workspace = true }
thiserror = { workspace = true }
oraiswap = { workspace = true }
dexter = { workspace = true }

[dev-dependencies]
cw-multi-test = { workspace = true }
dexter-lp-token = { workspace = true }
dexter-stable-pool = { workspace = true }
dexter-vault = { workspace = true }
dexter-weighted-pool = { workspace = true }
dexter-router = { workspace = true }
test-case = { workspace = true }
